--- a/index.html
+++ b/index.html
@@ -2,185 +2,123 @@
   <head>
     <meta charset="utf-8" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
-    <title>Remoto</title>
+    <title>Dra. Júlia Torres - Psiquiatra em Brasília</title>
     <meta content="" name="description" />
     <meta content="" name="author" />
     <meta content="" name="keywords" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link href="./images/favicon.png" rel="icon" type="image/png" />
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
     <nav class="navigation-menu">
-      <a>Remoto</a><a class="link" href="http://beta.remoto.me/auth/sign-in" target="_blank">Sign-in</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
+      <a>Dra. Júlia Torres</a><a class="link" href="#where">Consultórios</a><a class="link" href="#pricing">Preços & Planos</a><a class="link" href="#about">Sobre</a>
     </nav>
-    <header class="section-hero">
-      <h1>
-        Keep your team close  and your clients closer
-      </h1>
-      <h4>
-        Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
-      </h4>
-      <a class="button" href="http://beta.remoto.me" target="_blank">Start Free</a>
-    </header>
-    <section class="section-features" id="product">
-      <div class="feature">
-        <h2>
-          Your team on the same page
-        </h2>
-        <p>
-          Great customer communication relies on internal coordination. With Remoto, your team shares a common view of all customer interactions and stays always in sync.
-        </p>
-      </div>
-      <div class="feature">
-        <h2>
-          Freedom from the desk phone
-        </h2>
-        <p>
-          Remoto lets you make and receive calls with your business numbers, from your laptop or mobile. Easily transfer calls and create conferences, no pins or numbers to memorize, no cheat sheet clutering your desk.
-        </p>
-      </div>
-      <div class="feature">
-        <h2>
-          Transform your business in 7 min.
-        </h2>
-        <p>
-          Choose toll-free or local numbers from over 40 countries, invite your team members and get going in under 7 minutes. No need for the IT guy or hardware investments
-        </p>
-      </div>
+    <section class="section" id="about">
+      <img src="./images/julia.jpg" />
+      <h2>
+        Sobre
+      </h2>
+      <p>
+        Atual Diretora Médica da Clínica Psicodiagnóstica, Dra. Júlia Torres já foi Diretora Médica do Hospital Nise da Silveira, referência nacional na área de psiquiatria, e Coordenadora de Atenção Hospitalar da Superintendência de Saúde Mental da cidade do Rio de Janeiro.
+      </p>
+      <a class="button" href="#where">Agende uma consulta</a>
+      <h3>
+        Formação
+      </h3>
+      <ul>
+        <li>
+          IPUB/UFRJ
+        </li>
+        <li>
+          ESCS DF
+        </li>
+      </ul>
+      <h3>
+        Especialidades
+      </h3>
+      <p>
+        Ao procurar uma médica, você quer ter certeza que ela é especialista no seu problema. Ao mesmo tempo, especialmente em se tratando de saúde mental, é preciso sempre respeitar a complexidade do ser humano e saber que cada caso é um caso.
+      </p>
+      <p>
+        Os problemas mais comuns dos pacientes que me buscam no consultório:
+      </p>
+      <ul>
+        <li>
+          Depressão
+        </li>
+        <li>
+          Ansiedade
+        </li>
+        <li>
+          TDAH
+        </li>
+        <li>
+          Autismo
+        </li>
+        <li>
+          Transtorno Bipolar
+        </li>
+        <li>
+          Transtorno de Pânico
+        </li>
+      </ul>
+      <p>
+        Mas caso seu problema não esteja listado aqui, não se acanhe. Com anos de trabalho no SUS e em consultório particular, posso dizer em psiquiatria já vi e vivi muita coisa.
+      </p>
+      <p>
+        Marque uma consulta e me conte seu problema. Caso eu considere que outro profissional poderá melhor atendê-lo, ficarei feliz em te encaminhar e nem cobrarei a consulta.
+      </p>
+      <a class="button" href="#where">Agende uma consulta</a>
     </section>
-    <section class="section-pricing" id="pricing">
-      <h1>
-        Simple Pricing.
-      </h1>
-      <div class="plans">
-        <div class="plan">
-          <h2 class="name">
-            Free
-          </h2>
-          <h3 class="price">
-            $0
-          </h3>
-          <p class="note">
-            Yeeah! 🎉
-          </p>
-          <a class="button -small" href="http://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
-          <ul class="features">
-            <li>
-              Free Intra-company calls worldwide
-            </li>
-            <li>
-              1 month message storage
-            </li>
-            <li>
-              Unlimited groups
-            </li>
-          </ul>
-        </div>
-        <div class="plan -soon">
-          <h2 class="name">
-            Professional
-          </h2>
-          <h3 class="price">
-            $20
-          </h3>
-          <p class="note">
-            per active user, per month
-          </p>
-          <a class="button -small">Available Soon…</a>
-          <ul class="features">
-            <li>
-              All features from Free plan
-            </li>
-            <li>
-              1 year message storage
-            </li>
-            <li>
-              Toll free number
-            </li>
-            <li>
-              Unlimited inbound calls*
-            </li>
-            <li>
-              Outbound calls**
-            </li>
-          </ul>
-        </div>
-        <div class="plan -soon">
-          <h2 class="name">
-            Enterprise
-          </h2>
-          <h3 class="price">
-            $50
-          </h3>
-          <p class="note">
-            per active user, per month
-          </p>
-          <a class="button -small">Available Soon…</a>
-          <ul class="features">
-            <li>
-              All features from Professional plan
-            </li>
-            <li>
-              Unlimited message storage
-            </li>
-            <li>
-              Call Queues
-            </li>
-            <li>
-              Bring Your Own Carrier
-            </li>
-            <li>
-              Compliance Exports for all messages
-            </li>
-            <li>
-              Advanced IVR
-            </li>
-          </ul>
-        </div>
+    <section class="section" id="pricing"></section>
+    <h2>
+      Preços
+    </h2>
+    <h4>
+      Consulta
+    </h4>
+    <p>
+      R$ 450,00
+    </p>
+    <p>
+      A consulta dura o tempo que for necessário, normalmente 1 hora.
+    </p>
+    <h4>
+      Formas de Pagamento
+    </h4>
+    <p>
+      Cheque ou dinheiro.
+    </p>
+    <section class="section" id="where"></section>
+    <h2>
+      Consulórios
+    </h2>
+    <ute></ute>
+    <footer class="section-footer">
+      <div class="column">
+        <a>Remoto</a><a>Blog</a><a>Facebook</a><a>Linkedin</a>
       </div>
-      <div class="footnote">
-        <p>
-          * toll free excluded
-        </p>
-        <p>
-          ** price per minute
-        </p>
+      <div class="column">
+        <h4>
+          Remoto
+        </h4>
+        <a>Features</a><a>Pricing</a>
       </div>
-    </section>
-    <section class="section-letter">
-      <div class="envelope"></div>
-      <div class="letter">
-        <h1>
-          A Letter from our CEO
-        </h1>
-        <p class="-bold">
-          Save yourself. Save the world.
-        </p>
-        <p>
-          Life is short and the world is warming. What can you do about it? I bet you already are: <span class="-strike">Remoto</span> Remote working.
-        </p>
-        <p>
-          The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere. Everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love and see the world, without ever having to commute.
-        </p>
-        <p>
-          Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen. How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization?
-        </p>
-        <p>
-          This is a problem I had myself and so did several professionals we interviewed. Remoto's goal is to allow you to communicate better with your customers and your team, and prove that people don't need to be in the same room to be on the same page.
-        </p>
-        <p>
-          Remoto is more than work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
-        </p>
-        <p>
-          Yours,
-        </p>
-        <p class="signature">
-          Fred Guth, Founder & CEO
-        </p>
+      <div class="column">
+        <h4>
+          Download
+        </h4>
+        <a>Desktop App</a><a>Mobile App</a>
       </div>
-      <a class="button" href="http://beta.remoto.me" target="_blank">Start Free</a>
-    </section>
+      <div class="column">
+        <h4>
+          Support
+        </h4>
+        <a>800-736-6860</a><a>hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms of Service</a><a href="terms-of-service.html" target="_blank">Privacy</a>
+      </div>
+    </footer>
     <script src="js/scripts.js"></script>
   </body>
 </html>
