--- a/index.html
+++ b/index.html
@@ -21,102 +21,79 @@
         Sobre
       </h2>
       <p>
-        Atual Diretora Médica da Clínica Psicodiagnóstica, Dra. Júlia Torres já foi Diretora Médica do Hospital Nise da Silveira, referência nacional na área de psiquiatria, e Coordenadora de Atenção Hospitalar da Superintendência de Saúde Mental da cidade do Rio de Janeiro.
-      </p>
-      <a class="button" href="#where">Agende uma consulta</a>
-      <h3>
-        Formação
-      </h3>
-      <ul>
-        <li>
-          IPUB/UFRJ
-        </li>
-        <li>
-          ESCS DF
-        </li>
-      </ul>
-      <h3>
-        Especialidades
-      </h3>
-      <p>
-        Ao procurar uma médica, você quer ter certeza que ela é especialista no seu problema. Ao mesmo tempo, especialmente em se tratando de saúde mental, é preciso sempre respeitar a complexidade do ser humano e saber que cada caso é um caso.
-      </p>
-      <p>
-        Os problemas mais comuns dos pacientes que me buscam no consultório:
-      </p>
-      <ul>
-        <li>
-          Depressão
-        </li>
-        <li>
-          Ansiedade
-        </li>
-        <li>
-          TDAH
-        </li>
-        <li>
-          Autismo
-        </li>
-        <li>
-          Transtorno Bipolar
-        </li>
-        <li>
-          Transtorno de Pânico
-        </li>
-      </ul>
-      <p>
-        Mas caso seu problema não esteja listado aqui, não se acanhe. Com anos de trabalho no SUS e em consultório particular, posso dizer em psiquiatria já vi e vivi muita coisa.
-      </p>
-      <p>
-        Marque uma consulta e me conte seu problema. Caso eu considere que outro profissional poderá melhor atendê-lo, ficarei feliz em te encaminhar e nem cobrarei a consulta.
+        Psiquiatra formada no IPUB/UFRJ, Dra. Júlia Torres atende principalmente crianças, adolescentes e adultos com problemas de ansiedade, depressão e TDAH.
       </p>
       <a class="button" href="#where">Agende uma consulta</a>
     </section>
-    <section class="section" id="pricing"></section>
-    <h2>
-      Preços
-    </h2>
-    <h4>
-      Consulta
-    </h4>
-    <p>
-      R$ 450,00
-    </p>
-    <p>
-      A consulta dura o tempo que for necessário, normalmente 1 hora.
-    </p>
-    <h4>
-      Formas de Pagamento
-    </h4>
-    <p>
-      Cheque ou dinheiro.
-    </p>
-    <section class="section" id="where"></section>
-    <h2>
-      Consulórios
-    </h2>
-    <ute></ute>
+    <section class="section-columned" id="pricing">
+      <div class="column">
+        <h2>
+          Preços
+        </h2>
+        <h3>
+          Consultas
+        </h3>
+        <p>
+          R$450
+        </p>
+        <h3>
+          Formas de Pagamento
+        </h3>
+        <p>
+          Dinheiro, Cheque ou Depósito.
+        </p>
+      </div>
+      <div class="column">
+        <h2>
+          Planos
+        </h2>
+        <p>
+          <b>Dra. Júlia não é conveniada a nenhum plano de saúde.</b>
+        </p>
+        <p>
+          Se você possui seguro saúde ou a opção de livre escolha em seu plano de saúde, poderá receber reembolso apresentando o recibo que será entregue durante a consulta.
+        </p>
+      </div>
+      <h2>
+        Consultórios
+      </h2>
+      <div class="column">
+        <h3>
+          Liberty Mall
+        </h3>
+        <p>
+          Torre B - Sala 807
+        </p>
+        <p>
+          Asa Norte
+        </p>
+        <p>
+          Tel. (61) 3024-9058
+        </p>
+      </div>
+      <div class="column">
+        <h3>
+          Centro Médico Lúcio Costa
+        </h3>
+        <p>
+          SGAS 610, Lt 74 Conjunto F
+        </p>
+        <p>
+          Bl.2 - Sala 227
+        </p>
+        <p>
+          Asa Sul
+        </p>
+        <p>
+          Tel. (61) 3536-6360
+        </p>
+      </div>
+    </section>
     <footer class="section-footer">
       <div class="column">
-        <a>Remoto</a><a>Blog</a><a>Facebook</a><a>Linkedin</a>
-      </div>
-      <div class="column">
-        <h4>
-          Remoto
-        </h4>
-        <a>Features</a><a>Pricing</a>
-      </div>
-      <div class="column">
-        <h4>
-          Download
-        </h4>
-        <a>Desktop App</a><a>Mobile App</a>
-      </div>
-      <div class="column">
-        <h4>
-          Support
-        </h4>
-        <a>800-736-6860</a><a>hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms of Service</a><a href="terms-of-service.html" target="_blank">Privacy</a>
+        <p>
+          Júlia Torres c Copyright 2017
+        </p>
       </div>
     </footer>
     <script src="js/scripts.js"></script>
