--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
   </head>
   <body>
     <nav class="navigation-menu">
-      <a>Dra. Júlia Torres</a><a class="link" href="#where">Consultórios</a><a class="link" href="#pricing">Preços & Planos</a><a class="link" href="#about">Sobre</a>
+      <a class="logo" href="#sobre">Dra<span class="dot"></span> Júlia Torres</a><a class="link" href="#consultorios">Consultórios</a><a class="link" href="#planos">Preços & Planos</a><a class="link" href="#sobre">Sobre</a>
     </nav>
-    <section class="section" id="about">
-      <img src="./images/julia.jpg" />
-      <h2>
+    <section class="section" id="sobre">
+      <h1>
         Sobre
-      </h2>
+      </h1>
+      <img src="./images/julia.jpg" />
       <p>
         Psiquiatra formada no IPUB/UFRJ, Dra. Júlia Torres atende principalmente crianças, adolescentes e adultos com problemas de ansiedade, depressão e TDAH.
       </p>
-      <a class="button" href="#where">Agende uma consulta</a>
+      <a class="button" href="#consultorios">Agende uma consulta</a>
     </section>
-    <section class="section-columned" id="pricing">
+    <section class="section-columned" id="planos">
       <div class="column">
-        <h2>
+        <h1>
           Preços
-        </h2>
+        </h1>
         <h3>
           Consultas
         </h3>
@@ -44,19 +44,21 @@
         </p>
       </div>
       <div class="column">
-        <h2>
+        <h1>
           Planos
-        </h2>
+        </h1>
         <p>
-          <b>Dra. Júlia não é conveniada a nenhum plano de saúde.</b>
+          Dra. Júlia não é conveniada a nenhum plano de saúde.
         </p>
         <p>
           Se você possui seguro saúde ou a opção de livre escolha em seu plano de saúde, poderá receber reembolso apresentando o recibo que será entregue durante a consulta.
         </p>
       </div>
-      <h2>
+    </section>
+    <section class="section-columned" id="consultorios">
+      <h1>
         Consultórios
-      </h2>
+      </h1>
       <div class="column">
         <h3>
           Liberty Mall
@@ -92,7 +94,7 @@
     <footer class="section-footer">
       <div class="column">
         <p>
-          Júlia Torres c Copyright 2017
+          Júlia Torres © Copyright 2017
         </p>
       </div>
     </footer>
